--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -66,6 +66,10 @@ section.servicos {
         width: 100%;
         height: 100%;
     }
+
+    img.service {
+      border-radius: 10%;
+    }
 }
 
 body {
